--- a/css/modules/box-shadow.css
+++ b/css/modules/box-shadow.css
@@ -19,3 +19,8 @@
 .bs-\.5r\:h:hover {
 	box-shadow: 0 .0625rem .5rem 0 hsla(0, 0%, 0%, .125)
 }
+
+.bs-1r,
+.bs-1r\:h:hover {
+	box-shadow: 0 .0625rem 1rem 0 hsla(0, 0%, 0%, .125)
+}
