--- a/css/blank.css
+++ b/css/blank.css
@@ -38,10 +38,10 @@ GLOBAL ADJUSTMENTS
 html {
 	box-sizing: border-box;
 	font-size: 1rem;
-	/* ↳ 1rem translates to 16px in most browsers – unless the user has adjusted the default font-size to be larger or smaller  */
+	/* &#8627; 1rem translates to 16px in most browsers – unless the user has adjusted the default font-size to be larger or smaller  */
 	line-height: 1.5;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-	/* ↳ using default system font */
+	/* &#8627; using default system font */
 	border-style: solid;
 	height: 100%;
 }
@@ -84,7 +84,7 @@ body {
 	-webkit-text-size-adjust: none;
 	-ms-text-size-adjust: none;
 	text-size-adjust: none;
-	/* ↳ don't let for example mobile Safari adjust font sizes */
+	/* &#8627; don't let for example mobile Safari adjust font sizes */
 }
 
 
@@ -111,7 +111,7 @@ abbr[title] {
 	text-decoration: none;
 	border-bottom-width: var(--\.0625);
 	padding-bottom: var(--\.0625);
-	/* ↳ adjust to suit your typeface */
+	/* &#8627; adjust to suit your typeface */
 }
 
 
@@ -153,19 +153,19 @@ a {
 h1 {
 	font-size: 3rem;
 	line-height: 1.125;
-	/* ↳ smaller line-height for very large type */
+	/* &#8627; smaller line-height for very large type */
 }
 
 h2 {
 	font-size: 2rem;
 	line-height: 1.25;
-	/* ↳ smaller line-height for large type */
+	/* &#8627; smaller line-height for large type */
 }
 
 h3 {
 	font-size: 1.5rem;
 	line-height: 1.25;
-	/* ↳ smaller line-height for large type */
+	/* &#8627; smaller line-height for large type */
 }
 
 h4 {
@@ -220,7 +220,7 @@ fieldset {
 
 p + p {
 	margin-top: -.5rem;
-	/* ↳ better: "calc(0rem - var(--\.5)" (not working in most browsers currently) */
+	/* &#8627; better: "calc(0rem - var(--\.5)" (not working in most browsers currently) */
 }
 
 
@@ -235,7 +235,7 @@ p + p {
 * + legend,
 * + caption {
 	margin-top: var(--2);
-	/* ↳ stay away from preceding content within document flow  */
+	/* &#8627; stay away from preceding content within document flow  */
 }
 
 
@@ -266,13 +266,13 @@ hr {
 li,
 dt {
 	margin-bottom: var(--\.5);
-	/* ↳  vertical rhythm for list elements  */
+	/* &#8627;  vertical rhythm for list elements  */
 }
 
 li > ol,
 li > ul {
 	margin-top: var(--\.5);
-	/* ↳  correct vertical rhythm for nested lists  */
+	/* &#8627;  correct vertical rhythm for nested lists  */
 	margin-left: var(--1);
 }
 
@@ -287,7 +287,7 @@ ul li::before {
 
 ol {
 	margin-left: var(--2);
-	/* ↳  adjust if you have very long ordered lists (with more than 3 digits)  */
+	/* &#8627;  adjust if you have very long ordered lists (with more than 3 digits)  */
 }
 
 li > ol {
@@ -301,7 +301,7 @@ dd::before {
 
 dd + dt {
 	margin-top: var(--1);
-	/* ↳  vertical rhythm in the case, that definition lists consist of more than one definition title  */
+	/* &#8627;  vertical rhythm in the case, that definition lists consist of more than one definition title  */
 }
 
 
@@ -383,7 +383,7 @@ address {
 small,
 figcaption {
 	font-size: .75rem;
-	/* ↳ change unit to "em" if you want relative scaling */
+	/* &#8627; change unit to "em" if you want relative scaling */
 	letter-spacing: .0375em;
 }
 
@@ -412,7 +412,7 @@ q::after {
 u {
 	text-decoration: none;
 	font-size: .875em;
-	/* ↳ adjust for optimal optical alignment */
+	/* &#8627; adjust for optimal optical alignment */
 	text-transform: uppercase;
 	letter-spacing: var(--\.125);
 	font-weight: 500;
@@ -438,7 +438,7 @@ sub {
 	top: -.75em;
 	font-size: .75rem;
 	font-weight: 500;
-	/* ↳ adjust to visually match copy weight */
+	/* &#8627; adjust to visually match copy weight */
 }
 
 sub {
@@ -454,7 +454,7 @@ mark {
 mark::before,
 mark::after {
 	content: "\00A0";
-	/* ↳ adding a non-breaking space before and after */
+	/* &#8627; adding a non-breaking space before and after */
 }
 
 
@@ -463,20 +463,20 @@ mark::after {
 details summary {
 	border-bottom-width: var(--\.0625);
 	border-style: solid;
-	/* ↳ needed for Safari */
+	/* &#8627; needed for Safari */
 	padding: var(--1) var(--2) var(--1) 0;
 	background-image: url("data:image/svg+xml,\<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' style='fill:hsl(0, 0%, 15%);'\>\<path d='M1 12 L16 26 L31 12 L27 8 L16 18 L5 8 z'/\>\</svg\>");
-	/* ↳ fill color should be: "var(--text-color)" or "currentColor" (both does not work currently) */
+	/* &#8627; fill color should be: "var(--text-color)" or "currentColor" (both does not work currently) */
 	background-size: 1rem;
 	background-position: right var(--\.5) center;
-	/* ↳ tiny indention to the left */
+	/* &#8627; tiny indention to the left */
 	cursor: pointer;
 	transition: var(--transition-short);
 }
 
 details[open] summary {
 	background-image: url("data:image/svg+xml,\<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' style='fill:hsl(0, 0%, 15%);'\>\<path d='M1 20 L16 6 L31 20 L27 24 L16 14 L5 24 z'/\>\</svg\>");
-	/* ↳ fill color should be: "var(--text-color)" or "currentColor" (both does not work currently) */
+	/* &#8627; fill color should be: "var(--text-color)" or "currentColor" (both does not work currently) */
 }
 
 details summary::-webkit-details-marker {
@@ -497,7 +497,7 @@ table {
 
 table > * {
 	text-align: left;
-	/* ↳ align all text in tables left */
+	/* &#8627; align all text in tables left */
 }
 
 thead {
@@ -512,7 +512,7 @@ th,
 td {
 	padding: var(--1);
 	min-width: var(--8);
-	/* ↳ adjust to suit your needs */
+	/* &#8627; adjust to suit your needs */
 }
 
 th:first-child,
@@ -597,18 +597,18 @@ select,
 
 select {
 	background-image: url("data:image/svg+xml,\<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' style='fill:hsl(0, 0%, 15%);'\>\<path d='M1 12 L16 26 L31 12 L27 8 L16 18 L5 8 z'/\>\</svg\>");
-	/* ↳ fill color should be: "var(--text-color)" or "currentColor" (both does not work currently) */
+	/* &#8627; fill color should be: "var(--text-color)" or "currentColor" (both does not work currently) */
 	background-size: 1rem;
 	background-position: right var(--1) center;
-	/* ↳ indention to the left */
+	/* &#8627; indention to the left */
 	line-height: initial;
-	/* ↳ prevend descenders from being cut-off on Chrome */
+	/* &#8627; prevend descenders from being cut-off on Chrome */
 }
 
 [type="search"]::-webkit-input-placeholder {
 	background-repeat: no-repeat;
 	background-image: url("data:image/svg+xml,\<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' style='fill:hsl(0, 0%, 15%);'\>\<path d='M12 0 A12 12 0 0 0 0 12 A12 12 0 0 0 12 24 A12 12 0 0 0 18.5 22.25 L28 32 L32 28 L22.25 18.5 A12 12 0 0 0 24 12 A12 12 0 0 0 12 0 M12 4 A8 8 0 0 1 12 20 A8 8 0 0 1 12 4'/\>\</svg\>");
-	/* ↳ fill color should be: "var(--text-color)" or "currentColor" (both does not work currently) */
+	/* &#8627; fill color should be: "var(--text-color)" or "currentColor" (both does not work currently) */
 	background-size: 1rem;
 	background-position: right center;
 }
@@ -656,7 +656,7 @@ input[type=range]::-webkit-slider-thumb {
 	cursor: pointer;
 	position: relative;
 	top: -.5rem;
-	/* ↳ better: "calc(0rem - var(--\.5)" (not working in most browsers currently) */
+	/* &#8627; better: "calc(0rem - var(--\.5)" (not working in most browsers currently) */
 	background-color: currentColor;
 	-webkit-appearance: none;
 	border-radius: 100%;
@@ -672,7 +672,7 @@ input[type=range]::-webkit-slider-thumb::before {
 	position: absolute;
 	top: -.5rem;
 	left: -.5rem;
-	/* ↳ better: "calc(0rem - var(--\.5)" (not working in most browsers currently) */
+	/* &#8627; better: "calc(0rem - var(--\.5)" (not working in most browsers currently) */
 	width: var(--2);
 	height: var(--2);
 	background-color: var(--darken);
