--- a/css/modules/flex-grow.css
+++ b/css/modules/flex-grow.css
@@ -1,17 +1,15 @@
-/* blink.css | MIT License */
-
-.fg-0 {
+.fg\:0 {
     flex-grow: 0
 }
 
-.fg-1 {
+.fg\:1 {
     flex-grow: 1
 }
 
-.fg-2 {
+.fg\:2 {
     flex-grow: 2
 }
 
-.fg-4 {
+.fg\:4 {
     flex-grow: 4
 }
