--- a/css/modules/left.css
+++ b/css/modules/left.css
@@ -1,45 +1,43 @@
-/* blink.css | MIT License */
-
-.l--4r {
+.l\:-4r {
     left: -4rem
 }
 
-.l--2r {
+.l\:-2r {
     left: -2rem
 }
 
-.l--1r {
+.l\:-1r {
     left: -1rem
 }
 
-.l--\.5r {
+.l\:-\.5r {
     left: -.5rem
 }
 
-.l--\.25r {
+.l\:-\.25r {
     left: -.25rem
 }
 
-.l-0 {
+.l\:0 {
     left: 0
 }
 
-.l-\.25r {
+.l\:\.25r {
     left: .25rem
 }
 
-.l-\.5r {
+.l\:\.5r {
     left: .5rem
 }
 
-.l-1r {
+.l\:1r {
     left: 1rem
 }
 
-.l-2r {
+.l\:2r {
     left: 2rem
 }
 
-.l-4r {
+.l\:4r {
     left: 4rem
 }
