--- a/css/modules/bottom.css
+++ b/css/modules/bottom.css
@@ -1,45 +1,43 @@
-/* blink.css | MIT License */
-
-.b--4r {
+.b\:-4r {
     bottom: -4rem
 }
 
-.b--2r {
+.b\:-2r {
     bottom: -2rem
 }
 
-.b--1r {
+.b\:-1r {
     bottom: -1rem
 }
 
-.b--\.5r {
+.b\:-\.5r {
     bottom: -.5rem
 }
 
-.b--\.25r {
+.b\:-\.25r {
     bottom: -.25rem
 }
 
-.b-0 {
+.b\:0 {
     bottom: 0
 }
 
-.b-\.25r {
+.b\:\.25r {
     bottom: .25rem
 }
 
-.b-\.5r {
+.b\:\.5r {
     bottom: .5rem
 }
 
-.b-1r {
+.b\:1r {
     bottom: 1rem
 }
 
-.b-2r {
+.b\:2r {
     bottom: 2rem
 }
 
-.b-4r {
+.b\:4r {
     bottom: 4rem
 }
