--- a/css/modules/flex-basis.css
+++ b/css/modules/flex-basis.css
@@ -1,61 +1,59 @@
-/* blink.css | MIT License */
-
-.fb-a {
+.fb\:a {
     flex-basis: auto
 }
 
-.fb-10\% {
+.fb\:10\% {
     flex-basis: 10%
 }
 
-.fb-20\% {
+.fb\:20\% {
     flex-basis: 20%
 }
 
-.fb-25\% {
+.fb\:25\% {
     flex-basis: 25%
 }
 
-.fb-30\% {
+.fb\:30\% {
     flex-basis: 30%
 }
 
-.fb-33\% {
+.fb\:33\% {
     flex-basis: calc(1/3 * 100%)
 }
 
-.fb-40\% {
+.fb\:40\% {
     flex-basis: 40%
 }
 
-.fb-50\% {
+.fb\:50\% {
     flex-basis: 50%
 }
 
-.fb-60\% {
+.fb\:60\% {
     flex-basis: 60%
 }
 
-.fb-66\% {
+.fb\:66\% {
     flex-basis: calc(2/3 * 100%)
 }
 
-.fb-70\% {
+.fb\:70\% {
     flex-basis: 70%
 }
 
-.fb-75\% {
+.fb\:75\% {
     flex-basis: 75%
 }
 
-.fb-80\% {
+.fb\:80\% {
     flex-basis: 80%
 }
 
-.fb-90\% {
+.fb\:90\% {
     flex-basis: 90%
 }
 
-.fb-100\% {
+.fb\:100\% {
     flex-basis: 100%
 }
