--- a/css/modules/flex-direction.css
+++ b/css/modules/flex-direction.css
@@ -1,62 +1,60 @@
-/* blink.css | MIT License */
-
-.fd-c {
+.fd\:c {
     flex-direction: column
 }
 
-.fd-r {
+.fd\:r {
     flex-direction: row
 }
 
-.fd-cr {
+.fd\:cr {
     flex-direction: column-reverse
 }
 
-.fd-rr {
+.fd\:rr {
     flex-direction: row-reverse
 }
 
 @media screen and (min-width: 40rem) {
-    .fd-c\@md {
+    .fd\:c\@md {
         flex-direction: column
     }
-    .fd-r\@md {
+    .fd\:r\@md {
         flex-direction: row
     }
-    .fd-cr\@md {
+    .fd\:cr\@md {
         flex-direction: column-reverse
     }
-    .fd-rr\@md {
+    .fd\:rr\@md {
         flex-direction: row-reverse
     }
 }
 
 @media screen and (min-width: 60rem) {
-    .fd-c\@lg {
+    .fd\:c\@lg {
         flex-direction: column
     }
-    .fd-r\@lg {
+    .fd\:r\@lg {
         flex-direction: row
     }
-    .fd-cr\@lg {
+    .fd\:cr\@lg {
         flex-direction: column-reverse
     }
-    .fd-rr\@lg {
+    .fd\:rr\@lg {
         flex-direction: row-reverse
     }
 }
 
 @media screen and (min-width: 80rem) {
-    .fd-c\@xl {
+    .fd\:c\@xl {
         flex-direction: column
     }
-    .fd-r\@xl {
+    .fd\:r\@xl {
         flex-direction: row
     }
-    .fd-cr\@xl {
+    .fd\:cr\@xl {
         flex-direction: column-reverse
     }
-    .fd-rr\@xl {
+    .fd\:rr\@xl {
         flex-direction: row-reverse
     }
 }
