--- a/css/modules/flex-shrink.css
+++ b/css/modules/flex-shrink.css
@@ -1,17 +1,15 @@
-/* blink.css | MIT License */
-
-.fs-0 {
+.fs\:0 {
     flex-shrink: 0
 }
 
-.fs-1 {
+.fs\:1 {
     flex-shrink: 1
 }
 
-.fs-2 {
+.fs\:2 {
     flex-shrink: 2
 }
 
-.fs-4 {
+.fs\:4 {
     flex-shrink: 4
 }
