--- a/css/modules/float.css
+++ b/css/modules/float.css
@@ -1,13 +1,11 @@
-/* blink.css | MIT License */
-
-.f-n {
+.f\:n {
     float: none
 }
 
-.f-l {
+.f\:l {
     float: left
 }
 
-.f-r {
+.f\:r {
     float: right
 }
