--- a/css/modules/font-weight.css
+++ b/css/modules/font-weight.css
@@ -1,179 +1,177 @@
-/* blink.css | MIT License */
-
-.fw-i {
+.fw\:i {
     font-weight: initial
 }
 
-.fw-l {
+.fw\:l {
     font-weight: lighter
 }
 
-.fw-n {
+.fw\:n {
     font-weight: normal
 }
 
-.fw-b {
+.fw\:b {
     font-weight: bold
 }
 
-.fw-100 {
+.fw\:100 {
     font-weight: 100
 }
 
-.fw-200 {
+.fw\:200 {
     font-weight: 200
 }
 
-.fw-300 {
+.fw\:300 {
     font-weight: 300
 }
 
-.fw-400 {
+.fw\:400 {
     font-weight: 400
 }
 
-.fw-500 {
+.fw\:500 {
     font-weight: 500
 }
 
-.fw-600 {
+.fw\:600 {
     font-weight: 600
 }
 
-.fw-700 {
+.fw\:700 {
     font-weight: 700
 }
 
-.fw-800 {
+.fw\:800 {
     font-weight: 800
 }
 
-.fw-900 {
+.fw\:900 {
     font-weight: 900
 }
 
 @media screen and (min-width: 40rem) {
-    .fw-i\@md {
+    .fw\:i\@md {
         font-weight: initial
     }
-    .fw-l\@md {
+    .fw\:l\@md {
         font-weight: lighter
     }
-    .fw-n\@md {
+    .fw\:n\@md {
         font-weight: normal
     }
-    .fw-b\@md {
+    .fw\:b\@md {
         font-weight: bold
     }
-    .fw-100\@md {
+    .fw\:100\@md {
         font-weight: 100
     }
-    .fw-200\@md {
+    .fw\:200\@md {
         font-weight: 200
     }
-    .fw-300\@md {
+    .fw\:300\@md {
         font-weight: 300
     }
-    .fw-400\@md {
+    .fw\:400\@md {
         font-weight: 400
     }
-    .fw-500\@md {
+    .fw\:500\@md {
         font-weight: 500
     }
-    .fw-600\@md {
+    .fw\:600\@md {
         font-weight: 600
     }
-    .fw-700\@md {
+    .fw\:700\@md {
         font-weight: 700
     }
-    .fw-800\@md {
+    .fw\:800\@md {
         font-weight: 800
     }
-    .fw-900\@md {
+    .fw\:900\@md {
         font-weight: 900
     }
 }
 
 @media screen and (min-width: 60rem) {
-    .fw-i\@lg {
+    .fw\:i\@lg {
         font-weight: initial
     }
-    .fw-l\@lg {
+    .fw\:l\@lg {
         font-weight: lighter
     }
-    .fw-n\@lg {
+    .fw\:n\@lg {
         font-weight: normal
     }
-    .fw-b\@lg {
+    .fw\:b\@lg {
         font-weight: bold
     }
-    .fw-100\@lg {
+    .fw\:100\@lg {
         font-weight: 100
     }
-    .fw-200\@lg {
+    .fw\:200\@lg {
         font-weight: 200
     }
-    .fw-300\@lg {
+    .fw\:300\@lg {
         font-weight: 300
     }
-    .fw-400\@lg {
+    .fw\:400\@lg {
         font-weight: 400
     }
-    .fw-500\@lg {
+    .fw\:500\@lg {
         font-weight: 500
     }
-    .fw-600\@lg {
+    .fw\:600\@lg {
         font-weight: 600
     }
-    .fw-700\@lg {
+    .fw\:700\@lg {
         font-weight: 700
     }
-    .fw-800\@lg {
+    .fw\:800\@lg {
         font-weight: 800
     }
-    .fw-900\@lg {
+    .fw\:900\@lg {
         font-weight: 900
     }
 }
 
 @media screen and (min-width: 80rem) {
-    .fw-i\@xl {
+    .fw\:i\@xl {
         font-weight: initial
     }
-    .fw-l\@xl {
+    .fw\:l\@xl {
         font-weight: lighter
     }
-    .fw-n\@xl {
+    .fw\:n\@xl {
         font-weight: normal
     }
-    .fw-b\@xl {
+    .fw\:b\@xl {
         font-weight: bold
     }
-    .fw-100\@xl {
+    .fw\:100\@xl {
         font-weight: 100
     }
-    .fw-200\@xl {
+    .fw\:200\@xl {
         font-weight: 200
     }
-    .fw-300\@xl {
+    .fw\:300\@xl {
         font-weight: 300
     }
-    .fw-400\@xl {
+    .fw\:400\@xl {
         font-weight: 400
     }
-    .fw-500\@xl {
+    .fw\:500\@xl {
         font-weight: 500
     }
-    .fw-600\@xl {
+    .fw\:600\@xl {
         font-weight: 600
     }
-    .fw-700\@xl {
+    .fw\:700\@xl {
         font-weight: 700
     }
-    .fw-800\@xl {
+    .fw\:800\@xl {
         font-weight: 800
     }
-    .fw-900\@xl {
+    .fw\:900\@xl {
         font-weight: 900
     }
 }
