--- a/css/modules/line-height.css
+++ b/css/modules/line-height.css
@@ -1,88 +1,86 @@
-/* blink.css | MIT License */
-
-.lh-\.875 {
+.lh\:\.875 {
     line-height: .875
 }
 
-.lh-1 {
+.lh\:1 {
     line-height: 1
 }
 
-.lh-1\.125 {
+.lh\:1\.125 {
     line-height: 1.125
 }
 
-.lh-1\.25 {
+.lh\:1\.25 {
     line-height: 1.25
 }
 
-.lh-1\.5 {
+.lh\:1\.5 {
     line-height: 1.5
 }
 
-.lh-1\.75 {
+.lh\:1\.75 {
     line-height: 1.75
 }
 
 @media screen and (min-width: 40rem) {
-    .lh-\.875\@md {
+    .lh\:\.875\@md {
         line-height: .875
     }
-    .lh-1\@md {
+    .lh\:1\@md {
         line-height: 1
     }
-    .lh-1\.125\@md {
+    .lh\:1\.125\@md {
         line-height: 1.125
     }
-    .lh-1\.25\@md {
+    .lh\:1\.25\@md {
         line-height: 1.25
     }
-    .lh-1\.5\@md {
+    .lh\:1\.5\@md {
         line-height: 1.5
     }
-    .lh-1\.75\@md {
+    .lh\:1\.75\@md {
         line-height: 1.75
     }
 }
 
 @media screen and (min-width: 60rem) {
-    .lh-\.875\@lg {
+    .lh\:\.875\@lg {
         line-height: .875
     }
-    .lh-1\@lg {
+    .lh\:1\@lg {
         line-height: 1
     }
-    .lh-1\.125\@lg {
+    .lh\:1\.125\@lg {
         line-height: 1.125
     }
-    .lh-1\.25\@lg {
+    .lh\:1\.25\@lg {
         line-height: 1.25
     }
-    .lh-1\.5\@lg {
+    .lh\:1\.5\@lg {
         line-height: 1.5
     }
-    .lh-1\.75\@lg {
+    .lh\:1\.75\@lg {
         line-height: 1.75
     }
 }
 
 @media screen and (min-width: 80rem) {
-    .lh-\.875\@xl {
+    .lh\:\.875\@xl {
         line-height: .875
     }
-    .lh-1\@xl {
+    .lh\:1\@xl {
         line-height: 1
     }
-    .lh-1\.125\@xl {
+    .lh\:1\.125\@xl {
         line-height: 1.125
     }
-    .lh-1\.25\@xl {
+    .lh\:1\.25\@xl {
         line-height: 1.25
     }
-    .lh-1\.5\@xl {
+    .lh\:1\.5\@xl {
         line-height: 1.5
     }
-    .lh-1\.75\@xl {
+    .lh\:1\.75\@xl {
         line-height: 1.75
     }
 }
