--- a/css/modules/right.css
+++ b/css/modules/right.css
@@ -1,45 +1,43 @@
-/* blink.css | MIT License */
-
-.r--4r {
+.r\:-4r {
     right: -4rem
 }
 
-.r--2r {
+.r\:-2r {
     right: -2rem
 }
 
-.r--1r {
+.r\:-1r {
     right: -1rem
 }
 
-.r--\.5r {
+.r\:-\.5r {
     right: -.5rem
 }
 
-.r--\.25r {
+.r\:-\.25r {
     right: -.25rem
 }
 
-.r-0 {
+.r\:0 {
     right: 0
 }
 
-.r-\.25r {
+.r\:\.25r {
     right: .25rem
 }
 
-.r-\.5r {
+.r\:\.5r {
     right: .5rem
 }
 
-.r-1r {
+.r\:1r {
     right: 1rem
 }
 
-.r-2r {
+.r\:2r {
     right: 2rem
 }
 
-.r-4r {
+.r\:4r {
     right: 4rem
 }
