--- a/css/modules/width.css
+++ b/css/modules/width.css
@@ -1,105 +1,103 @@
-/* blink.css | MIT License */
-
-.w-a {
+.w\:a {
     width: auto
 }
 
-.w-1r {
+.w\:1r {
     width: 1rem
 }
 
-.w-2r {
+.w\:2r {
     width: 2rem
 }
 
-.w-4r {
+.w\:4r {
     width: 4rem
 }
 
-.w-8r {
+.w\:8r {
     width: 8rem
 }
 
-.w-16r {
+.w\:16r {
     width: 16rem
 }
 
-.w-10\% {
+.w\:10\% {
     width: 10%
 }
 
-.w-20\% {
+.w\:20\% {
     width: 20%
 }
 
-.w-25\% {
+.w\:25\% {
     width: 25%
 }
 
-.w-30\% {
+.w\:30\% {
     width: 30%
 }
 
-.w-33\% {
+.w\:33\% {
     width: calc(1/3 * 100%)
 }
 
-.w-40\% {
+.w\:40\% {
     width: 40%
 }
 
-.w-50\% {
+.w\:50\% {
     width: 50%
 }
 
-.w-60\% {
+.w\:60\% {
     width: 60%
 }
 
-.w-66\% {
+.w\:66\% {
     width: calc(2/3 * 100%)
 }
 
-.w-70\% {
+.w\:70\% {
     width: 70%
 }
 
-.w-75\% {
+.w\:75\% {
     width: 75%
 }
 
-.w-80\% {
+.w\:80\% {
     width: 80%
 }
 
-.w-90\% {
+.w\:90\% {
     width: 90%
 }
 
-.w-100\% {
+.w\:100\% {
     width: 100%
 }
 
-.w-25vw {
+.w\:25vw {
     width: 25vw
 }
 
-.w-33vw {
+.w\:33vw {
     width: calc(1/3 * 100vw)
 }
 
-.w-50vw {
+.w\:50vw {
     width: 50vw
 }
 
-.w-66vw {
+.w\:66vw {
     width: calc(2/3 * 100vw)
 }
 
-.w-75vw {
+.w\:75vw {
     width: 75vw
 }
 
-.w-100vw {
+.w\:100vw {
     width: 100vw
 }
